# diffpose-video

./: .coverage  .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  download_checkpoints.py  pyproject.toml  setup_env.sh
.github/workflows/: ci.yml  publish-container.yml
configs/: explore.toml  infer.toml  visualise.toml
diffpose_video/: __init__.py  download_checkpoints.py
diffpose_video/common/: camera.py  config_loader.py  custom_dataset.py  data_video_utils.py  h36m_dataset.py  h36m_dataset_diff.py  humaneva_dataset.py  infer_utils.py  mocap_dataset.py
diffpose_video/models/: GraFormer.py  gcndiff.py  gcnpose.py
diffpose_video/runners/: diffpose_video.py
diffpose_video/scripts/: explore.py  infer.py  visualise.py
tests/: conftest.py  test_config.py  test_download_checkpoints.py  test_explore.py  test_infer.py  test_infer_utils.py  test_script_helpers.py  test_visualise.py
