[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diffpose-video"
version = "0.3.0"
description = "3D human pose estimation from video using DiffPose + MixSTE"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["pose estimation", "3d pose", "diffusion", "human motion"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy",
    "scipy",
    "einops",
    "timm>=0.9.0",
    "tqdm",
    "pyyaml",
    "opencv-python-headless",
    "rtmlib",
    "onnxruntime-gpu==1.20.1",
    "requests",
]

[project.optional-dependencies]
torch-cuda = [
    "torch>=2.0",
    "torchvision",
    "torchaudio",
]

[project.scripts]
diffpose-infer    = "diffpose_video.scripts.infer:main"
diffpose-download = "diffpose_video.download_checkpoints:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["diffpose_video*"]

[tool.setuptools.package-data]
"diffpose_video" = ["py.typed", "configs/*.yml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts  = "-v --tb=short"

[tool.coverage.run]
source = ["diffpose_video"]
omit   = ["diffpose_video/runners/*"]
